--- a/index.html
+++ b/index.html
@@ -219,17 +219,4 @@
                 return;
             }
 
-            const output = document.getElementById('output');
-            output.innerHTML = ""; // Очистить старое
-
-            // Расчет для 1000мм
-            const engine1000 = runEngine(L, W, H, 1000);
-            output.innerHTML += formatReport(1000, engine1000);
-
-            // Расчет для 1190мм
-            const engine1190 = runEngine(L, W, H, 1190);
-            output.innerHTML += formatReport(1190, engine1190);
-        }
-    </script>
-</body>
-</html>
+            const
